# PSPLIB-Editor

./: .gitignore  LICENSE  README.md  TODO  pyproject.toml  requirements.txt
psplib_editor/: graphs.py  instances.py  parsing.py  plotting.py  utils.py  writing.py
psplib_editor/resources/schemas/: problem_instance.schema.json
src/psplib-editor/: io.py  utils.py
src/psplib_editor/: instances.py  io.py
test/: io_test.py  parsing_test.py  writing_test.py
test/data/: j301_1.sm.json
