[project]
name = "psplib_editor"
version = "0.1.0"
authors = [
  { name="Krtiiik" },
]
description = "Utilities to represent, load, modify, and write PSPLIB instances"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Krtiiik/PSPLIB-Editor"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
